# wfl

./: .build_meta.json  .gitignore  .wflcfg  .whitesource  CDR,md  CHANGELOG.md  CREDITS.md  Cargo.toml  LICENSE  README.md  build_msi.ps1  build_msi_summary.md  bytecode_implementation_details.md  check_syntax.sh  collection_test.wfl  container_test.wfl  devin-was-here.txt  dhat-heap.json  function_call_test.wfl  hello.wfl  implementation_progress.md  inheritance_and_interfaces.md  install_rust.sh  knowladge from devin.txt  memory leak investigation.txt  memory_optimization.md  memory_optimization_results.md  missing_parser_functions.md  output.txt  param_binding_test.wfl  param_binding_test2.wfl  param_binding_test2_debug.txt  param_binding_test3.wfl  param_binding_test3_debug.txt  plan.md  pr_description.md  pr_description.txt  simple_test.wfl  test.wfl  test.wfl.ast.txt  (+11 more)
.cursor/rules/: wfl-rules.mdc
.github/workflows/: auto-fmt.yml  ci.yml  editor-build.yml  memory-leak.yml  nightly.yml  rust-tests.yml  versioning.yml  (+1 more)
CDR/: CDR3.txt
Dev diary/: 2025-05-26-nexus-file-type-fix.md  2025-05-27-fix-log-message-unused-var.md  2025-05-27-fix-static-analyzer-while-loop.md  2025-05-27-vscode-extension-consolidation.md  2025-05-30-bugreport-sdk-fix.md  2025-06-01-add-short-version-flag.md  2025-06-01-fix-analyzer-action-parameters.md  2025-06-01-fix-duplicate-symbol-type-warnings.md  2025-06-01-fix-msi-build-compilation-issues.md  2025-06-01-fix-type-checker-action-parameters.md  implementation_progress_2025-04-21.md  implementation_progress_2025-05-20.md  implementation_progress_2025-05-26.md
Docs/: error-reporting.md  error_catalog.md  implementation_progress.md  implementation_progress_2025-04-17.md  implementation_progress_2025-04-18.md  implementation_progress_2025-04-19.md  implementation_progress_2025-05-17.md  implementation_progress_2025-05-19.md  implementation_progress_2025-05-20.md  implementation_progress_2025-05-21.md  implementation_progress_2025-05-24.md  implementation_progress_2025-06-01.md  lib recs.md  missing_bytecode_features.md  pattern-module.md  rust_loc_counter.md  rust_loc_report.md  stdlib_implementation.md  test_suite_plan.md  todo.md  wfl spec.md  wfl todo.md  wfl-AERDS.md  wfl-IO.md  wfl-actions.md  wfl-async.md  wfl-containers.md  wfl-control-flow.md  wfl-deployment.md  wfl-devin.md  wfl-documentation-policy.md  wfl-error.md  wfl-foundation.md  wfl-int2.md  wfl-interpretor.md  wfl-lexar.md  wfl-lint.md  wfl-logging.md  wfl-regex.md  wfl-spec.md  (+9 more)
Nexus/: nexus.wfl  nexus.wfl.lex.txt  nexus_debug.txt  nexus_dev.wfl  nexus_dev.wfl.ast.txt  nexus_dev.wfl.lex.txt  nexus_dev_debug.txt  nexus_minimal.wfl  test.hold  test.wfl  test.wfl.ast.txt  test.wfl.lex.txt  test_debug.txt  test_mixed_actions.wfl  test_multiple_actions.wfl
Test Programs/: container_events_test.wfl  container_inheritance_simple_test.wfl  container_inheritance_test.wfl  container_interface_test.wfl  container_simple_test.wfl  container_simple_test_debug.txt  container_test.wfl  count_issue_example.wfl  count_loop_simple.wfl  count_loop_test.wfl  current_date_test.wfl  function_call_test.wfl  hello.wfl  hello_modified.wfl  hello_no_loop.wfl  loop_variable_test.wfl  minimal_time_test.wfl  minimal_time_test_debug.txt  native_display_test.wfl  nested_collection_test.wfl  pattern_test.wfl  random_and_time_test.wfl  random_and_time_test_debug.txt  simple_collection_test.wfl  simple_nested_test.wfl  simple_random_test.wfl  simple_random_test_debug.txt  simple_stdlib_test.wfl  simple_test.wfl  simple_test_script.wfl  simple_time_test.wfl  simple_time_test_debug.txt  stdlib_test.wfl  time_call_keyword_test.wfl  time_call_keyword_test_debug.txt  time_call_test.wfl  time_direct_test.wfl  time_math_test.wfl  time_math_test_debug.txt  time_test.wfl  (+4 more)
Tools/: .wflcfg  README.md  launch_msi_build.py  rust_loc_counter.py  wfl_config_checker.py  wfl_md_combiner.py
benches/: lexer_benchmarks.rs  parser_bench.rs
bugreport/: README.md  bug.py  bug_report_ai_raw.txt  bug_report_manual.json  bug_report_test_report_failure_message_panic_assertion_failed_resultis_err.json  check_types.py  config.py  requirements.txt  setup_api_key.md  simple_bug.py  start_bug_reporter.bat  test_import.py
crates/wfl_cli/: Cargo.toml
crates/wfl_cli/src/: lib.rs  main.rs
crates/wfl_cli/test_project/: .gitignore  README.md
crates/wfl_cli/test_project/src/: main.wfl
crates/wfl_cli/tests/: cli_tests.rs
crates/wfl_core/: Cargo.toml
crates/wfl_core/benches/: parser_bench.rs
crates/wfl_core/src/: debug_report.rs  lib.rs  repl.rs  version.rs
crates/wfl_core/src/debug_report/: execution.rs
crates/wfl_core/src/diagnostics/: mod.rs
crates/wfl_core/src/fixer/: mod.rs
crates/wfl_core/src/interpreter/: environment.rs  mod.rs  mod.rs.fix
crates/wfl_core/src/parser/: mod.rs
crates/wfl_core/src/stdlib/: core.rs  pattern_test.rs  text.rs
crates/wfl_core/src/typechecker/: mod.rs
crates/wfl_core/src/wfl_config/: mod.rs
crates/wfl_editor/: Cargo.toml  build.rs
crates/wfl_editor/src/: app.rs  config.rs  editor.rs  git.rs  lib.rs  lsp.rs  main.rs  syntax.rs  theme.rs  ui.rs  utils.rs  version.rs
crates/wfl_editor/tests/: smoke_tests.rs
docs/: BUILDING.md  debugging.md  memory_profiling.md
examples/: bad.wfl  clean.wfl  leak_demo.wfl
scripts/: bump_version.py  compare_heaptrack.py  init_config.ps1  install_vscode_extension.ps1  run_heaptrack.sh  test_bump_version.py
src/: config.rs  debug_report.rs  lib.rs  logging.rs  main.rs  repl.rs  repl_tests.rs  version.rs
tests/: action_tests.rs  cli_tests.rs  control_flow.rs  debug_truncation.rs  lib.rs  log_message_memory.rs  memory_leak.rs  memory_usage.rs  parser_write_modes.rs  step_mode.rs  test_runner.rs  test_utils.rs  typechecker.rs
vscode-extension/: .gitignore  .vscodeignore  IMPLEMENTATION-NOTES.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  vscode-wfl-0.1.0.vsix
vscode-wfl/: .gitignore  package-lock.json  package.json
wfl-lsp/: Cargo.toml
wfl-lsp/src/: lib.rs  main.rs
wix/: main.wxs
(+104 files in other folders)
