[package]
name = "wfl"
version = "0.1.0"
edition = "2024"
description = "WFL (WebFirst Language) is a programming language designed to be readable and intuitive using natural language constructs."
license = "Apache-2.0"
authors = ["Logbie LLC <info@logbie.com>"]

[package.metadata.bundle]
name = "WFL"
identifier = "com.logbie.wfl"
icon = ["icons/wfl.png"]
version = "0.1.0"
copyright = "© 2025 Logbie LLC"
category = "Developer Tool"
short_description = "WebFirst Language Compiler and Runtime"
long_description = "WFL (WebFirst Language) is a programming language designed to be readable and intuitive using natural language constructs."
executable = "wfl"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
wfl_core = { path = "crates/wfl_core", default-features = false }

[features]
default = ["cli"]  # editor deliberately opt-in to keep CLI binary tiny
cli     = ["wfl_cli"]
editor  = ["wfl_editor", "wfl_editor/gui"]  # GUI is optional for platforms without winit support
dhat-heap = ["dhat"]    # if you are doing heap profiling
dhat-ad-hoc = ["dhat"]  # if you are doing ad hoc profiling

[package.metadata.deb]
assets = [
    ["target/release/wfl", "usr/bin/", "755"],
    ["target/release/package/.wflcfg", "etc/wfl/wfl.cfg", "644"]
]
extended-description = """
WFL (WebFirst Language) is a programming language designed to be readable and intuitive
using natural language constructs. This package includes the WFL compiler and runtime.
"""
section = "devel"
priority = "optional"
maintainer-scripts = "debian/"
conf-files = ["/etc/wfl/wfl.cfg"]

[dependencies]
wfl_core = { path = "crates/wfl_core", version = "0.1.0" }
wfl_cli = { path = "crates/wfl_cli", version = "0.1.0", optional = true }
wfl_editor = { path = "crates/wfl_editor", version = "0.1.0", optional = true }
rustyline = "12.0.0"
log = "0.4.20"
simplelog = "0.12.1"
tokio = { version = "1.35.1", features = ["full", "macros"] }
dhat = { version = "0.3.0", optional = true }

[dev-dependencies]
tempfile = "3.19.1"
libc = "0.2.152"
criterion = "0.4"

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
debug = true
