[package]
name = "wfl"
version = "0.1.0"
edition = "2024"
description = "WFL (WebFirst Language) is a programming language designed to be readable and intuitive using natural language constructs."
license = "Apache-2.0"
authors = ["Logbie LLC <info@logbie.com>"]

[package.metadata.bundle]
name = "WFL"
identifier = "com.logbie.wfl"
icon = ["icons/wfl.png"]
version = "0.1.0"
copyright = "© 2025 Logbie LLC"
category = "Developer Tool"
short_description = "WebFirst Language Compiler and Runtime"
long_description = "WFL (WebFirst Language) is a programming language designed to be readable and intuitive using natural language constructs."
executable = "wfl"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
wfl_core = { path = "crates/wfl_core", default-features = false }

[features]
default = ["cli"]  # editor deliberately opt-in to keep CLI binary tiny
cli     = ["wfl_cli", "dep:log", "dep:simplelog", "dep:tokio", "wfl_core/repl"]
# Editor feature enables the editor but without GUI in headless environments
editor  = ["wfl_editor", "wfl_editor/gui", "dep:log", "dep:simplelog", "dep:tokio", "wfl_core/repl"]
# Editor-full feature enables the full GUI editor, but only works in non-headless environments
editor-full = ["editor", "wfl_editor/gui-full"]
# Optional features
database = ["wfl_core/database"]
network = ["wfl_core/network"]
io = ["wfl_core/io"]
sync = ["wfl_core/sync"]
full = ["database", "network", "io", "sync", "wfl_core/full"]
dhat-heap = ["dhat", "wfl_core/dhat-heap"]    # if you are doing heap profiling
dhat-ad-hoc = ["dhat", "wfl_core/dhat-ad-hoc"]  # if you are doing ad hoc profiling

[package.metadata.deb]
assets = [
    ["target/release/wfl", "usr/bin/", "755"],
    ["target/release/package/.wflcfg", "etc/wfl/wfl.cfg", "644"]
]
extended-description = """
WFL (WebFirst Language) is a programming language designed to be readable and intuitive
using natural language constructs. This package includes the WFL compiler and runtime.
"""
section = "devel"
priority = "optional"
maintainer-scripts = "debian/"
conf-files = ["/etc/wfl/wfl.cfg"]

[dependencies]
wfl_core = { path = "crates/wfl_core", version = "0.1.0", default-features = false }
wfl_cli = { path = "crates/wfl_cli", version = "0.1.0", optional = true, default-features = false }
wfl_editor = { path = "crates/wfl_editor", version = "0.1.0", optional = true, default-features = false }
log = { version = "0.4.20", optional = true }
simplelog = { version = "0.12.1", optional = true }
tokio = { version = "1.35.1", features = ["rt", "test", "macros"], optional = true }
dhat = { version = "0.3.0", optional = true }

[dev-dependencies]
tempfile = "3.19.1"
libc = "0.2.152"
criterion = "0.4"

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
debug = false
lto = true
codegen-units = 1
opt-level = "z"
strip = true
