[package]
name = "wfl-lsp"
version = "0.1.0"
edition = "2024"
description = "Language Server Protocol implementation for the WebFirst Language (WFL)"
license = "MIT"

[dependencies]
wfl = { path = ".." }
tower-lsp = "0.20.0"
tokio = { version = "1.35.1", features = ["full"] }
dashmap = "5.5.3"
serde_json = "1.0.114"
env_logger = "0.10.1"

[[bin]]
name = "wfl-lsp"
path = "src/main.rs"
