[package]
name = "wfl_core"
version = "0.1.0"
edition = "2024"
description = "Core functionality for the WebFirst Language (WFL)"
license = "Apache-2.0"
authors = ["Logbie LLC <info@logbie.com>"]

[dependencies]
logos = "0.15.0"
rand = "0.9.1"
regex = "1.10.3"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "sqlite", "mysql", "postgres"] }
serde_json = "1.0.114"
codespan-reporting = "0.11.1"
simplelog = "0.12.1"
chrono = "0.4.31"
once_cell = "1.18.0"
time = { version = "0.3", features = ["formatting", "macros"] }
dhat = { version = "0.3.0", optional = true }
rustyline = "12.0.0"

[features]
dhat-heap = ["dhat"]    # if you are doing heap profiling
dhat-ad-hoc = ["dhat"]  # if you are doing ad hoc profiling

[dev-dependencies]
tempfile = "3.19.1"
libc = "0.2.152"
criterion = "0.4"

[[bench]]
name = "parser_bench"
harness = false
