[package]
name = "wfl_editor"
version = "0.1.0"
edition = "2024"
description = "Integrated editor for the WebFirst Language (WFL)"
license = "Apache-2.0"
authors = ["Logbie LLC <info@logbie.com>"]

[dependencies]
wfl_core = { path = "../wfl_core", version = "0.1.0", default-features = false }
xi-rope = { version = "0.3.0", optional = true }
tokio = { version = "1.35.1", features = ["rt"], optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.114", optional = true }
toml = { version = "0.8.10", optional = true }
log = { version = "0.4.20", optional = true }
simplelog = { version = "0.12.1", optional = true }
dirs = { version = "5.0.1", optional = true }

# Optional dependencies
git2 = { version = "0.18.2", optional = true }
wfl_lsp = { path = "../wfl_lsp", optional = true }

# GUI dependencies - only used when gui feature is enabled and not in headless environments
# These are conditionally included based on build.rs detection
eframe = { version = "0.26.0", default-features = false, features = ["default_fonts", "wgpu"], optional = true }
egui = { version = "0.26.0", optional = true }
egui_extras = { version = "0.26.0", optional = true }

# Headless-safe dependencies for GUI feature
syntect = { version = "5.2.0", optional = true }

[features]
default = []
git-integration = ["dep:git2", "dep:serde", "dep:serde_json"]
lsp-bridge = ["dep:wfl_lsp", "dep:tokio", "dep:serde", "dep:serde_json"]
# The gui feature enables basic editor functionality that works in headless environments
gui = [
    "dep:xi-rope", "dep:serde", "dep:serde_json", 
    "dep:toml", "dep:log", "dep:simplelog", "dep:dirs",
    "dep:tokio", "dep:syntect"
]
# Only enable actual GUI libraries when explicitly requested AND not in headless mode
# These are conditionally compiled out in headless environments via build.rs
gui-full = [
    "gui",
    "dep:eframe", "dep:egui", "dep:egui_extras"
]

# TODO: proper grapheme mapping for xi_rope ↔ egui cursor

# Conditional bin target - only built when gui feature is enabled
[[bin]]
name = "wfl-editor"
path = "src/main.rs"
required-features = ["gui"]

[lib]
name = "wfl_editor"
path = "src/lib.rs"

[build-dependencies]
cfg-if = "1.0.0"

[dev-dependencies]
tempfile = "3.19.1"
